# fastapi_demo

./: .dockerignore  .gitignore  API_CONFIGURATION.md  BACKEND_IMPROVEMENTS_SUMMARY.md  CLAUDE.md  CORE_DIRECTORY_ANALYSIS.md  DOCKER_README.md  FRONTEND_ANALYSIS_INDEX.md  FRONTEND_ARCHITECTURE_ANALYSIS.md  FRONTEND_ARCHITECTURE_SUMMARY.md  FRONTEND_REFACTORING_ROADMAP.md  LICENSE  PROJECT_ANALYSIS_REPORT.md  SERVICES_API_ANALYSIS.md  SERVICES_FIXES_COMPLETED.md  TESTING.md  docker-compose.yaml  run_tests.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt
backend/app/: constants.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 035f626988ec_initial_commit_.py  2e1d01815f6e_create_all_tables_.py  346c1badb427_initial_commit_.py  add_constraints_and_indexes.py  c0bcc1ea7a9f_tables_creation_.py
backend/app/api/: __init__.py
backend/app/api/_shared/: base_crud_service.py  base_service.py  health.py  service_helper.py
backend/app/api/_shared/schema/: base.py  enums.py  schemas.py  types.py  validators.py
backend/app/api/_shared/tasks/: tasks.py
backend/app/api/drivers/: __init__.py  api.py  schemas.py  service.py
backend/app/api/order_documents/: __init__.py  api.py  file_operations.py  schemas.py  service.py  tasks.py
backend/app/api/orders/: BaseSchemas.py  api.py  schemas.py  service.py
backend/app/api/terminals/: __init__.py  api.py  schemas.py  service.py
backend/app/api/trailers/: __init__.py  api.py  schemas.py  service.py
backend/app/api/trucks/: __init__.py  api.py  schemas.py  service.py
backend/app/core/: dependencies.py  exception_handlers.py  exceptions.py  logging_config.py  settings.py
backend/app/core/configs/: FileConfig.py
backend/app/database/: __init__.py  base_model.py  conn.py  exceptions.py  subscriptable.py
backend/app/database/custom_types/: EnumType.py
backend/app/database/models/: Order.py  __init__.py
backend/app/database/models/_shared/: ProcessStatus.py
backend/app/database/models/_shared/enums/: CommodityType.py  ProcessStatus.py
backend/app/database/models/drivers/: Driver.py
backend/app/database/models/order/: Order.py  OrderServiceType.py
backend/app/database/models/orders/: Order.py  OrderDocument.py  OrderDocumentText.py  OrderServiceType.py  __init__.py
backend/app/database/models/orders/enums/: Commodity.py  OrderDocumentType.py  OrderServiceType.py  __init__.py
backend/app/database/models/terminals/: Terminal.py
backend/app/database/models/vehicles/: Trailer.py  Truck.py  VehicleMixin.py  __init__.py
backend/app/database/scripts/: fill_db.py
backend/app/domain/models/: order.py  order_document.py
backend/app/domain/services/: order_document_service.py  order_service.py
backend/app/domain/validators/: __init__.py  order_document_validator.py  order_validator.py
backend/app/infrastructure/: unit_of_work.py
backend/app/infrastructure/cache/: BaseRedisCache.py  __init__.py
backend/app/infrastructure/celery/: TaskBase.py  __init__.py  celery_app.py
backend/app/infrastructure/database/: engines.py
backend/app/infrastructure/repositories/: base_repository.py  driver_repository.py  order_document_repository.py  order_repository.py  terminal_repository.py  vehicle_repository.py
backend/app/modules/_shared/schema/: schemas.py  types.py  validators.py
backend/app/modules/cache/: BaseRedisCache.py  populate_cache.py  terminal.py
backend/app/modules/celery/: CeleryTask.py  TaskBase.py  celeryconfig.py
backend/app/modules/db/: __init__.py  engines.py  session_contexts.py
backend/app/modules/orders/: BaseSchemas.py  __init__.py  api.py  schemas.py  service.py
backend/app/modules/redis/: __init__.py
backend/app/resources/: __init__.py
backend/app/resources/_shared/schema/: types.py
backend/app/resources/order_documents/: BaseSchemas.py  api.py  service.py
backend/app/resources/orders/: schemas.py
backend/app/shared/: __init__.py
backend/app/shared/events/: __init__.py  base.py  handlers.py  order_document_events.py  order_events.py
backend/app/utils/: files.py  immutables.py  parsing.py  utils.py
backend/app/utils/dates/: date_filters.py  dates_conversion.py
backend/app/utils/models/: update_model.py
backend/app/utils/parsing/: document_parsing_manager.py
backend/app/utils/queries/: fetching.py  queries.py
backend/app/utils/validation/: README.md  foreign_key_validator.py
backend/entrypoints/: celery_worker.sh  flower.sh
backend/tests/: conftest.py  database_manager.py
backend/tests/api/: test_drivers.py  test_order_documents.py  test_orders.py  test_terminals.py  test_vehicles.py
backend/tests/unit/: __init__.py
configs/: pgadmin-servers.json
frontend/demo-app/: .dockerignore  .env.development  .env.example  .eslintrc.cjs  ARCHITECTURE.md  DDA_VIOLATIONS_QUICK_REFERENCE.md  DDA_VIOLATIONS_REPORT.md  DDA_VIOLATIONS_SUMMARY.txt  Dockerfile  Dockerfile.dev  FRONTEND_IMPROVEMENTS.md  ID_FILTERING_APPROACH.md  PHONE_INPUT_COMPONENT.md  README.md  README_DDA_ANALYSIS.md  REFERENCE_FIELDS_OPTIMIZATION.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/demo-app-v2/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
frontend/demo-app-v2/src/: App.jsx  index.jsx  main.jsx
frontend/demo-app-v2/src/app/: App.jsx  router.jsx
frontend/demo-app-v2/src/components/: Navbar.jsx  PageHeader.jsx  index.js
frontend/demo-app-v2/src/constants/: orderConstants.js
frontend/demo-app-v2/src/layouts/: MainLayout.jsx
frontend/demo-app-v2/src/pages/: OrdersPage.jsx
frontend/demo-app-v2/src/theme/: index.js
frontend/demo-app/src/: App.tsx  main.tsx  vite-env.d.ts
nginx/: nginx.conf
scripts/: TESTING.md  dev.sh
(+247 files in other folders)
